allow all keras activations

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -253,6 +253,7 @@ export(glm_grouped)
 export(has_multi_predict)
 export(importance_weights)
 export(is_varying)
+export(keras_activations)
 export(keras_mlp)
 export(keras_predict_classes)
 export(knit_engine_docs)
