--- a/NAMESPACE
+++ b/NAMESPACE
@@ -221,6 +221,7 @@ export(discrim_flexible)
 export(discrim_linear)
 export(discrim_quad)
 export(discrim_regularized)
+export(ensure_parsnip_format)
 export(eval_args)
 export(extract_fit_engine)
 export(extract_fit_time)
