--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: parsnip
 Title: A Common API to Modeling and Analysis Functions
-Version: 1.2.1.9004
+Version: 1.3.0
 Authors@R: c(
     person("Max", "Kuhn", , "max@posit.co", role = c("aut", "cre")),
     person("Davis", "Vaughan", , "davis@posit.co", role = "aut"),
     person("Emil", "Hvitfeldt", , "emil.hvitfeldt@posit.co", role = "ctb"),
-    person("Posit Software, PBC", role = c("cph", "fnd"), comment = c(ROR = "03wc8by49"))
+    person("Posit Software, PBC", role = c("cph", "fnd"),
+           comment = c(ROR = "03wc8by49"))
   )
 Maintainer: Max Kuhn <max@posit.co>
 Description: A common interface is provided to allow users to specify a
@@ -70,10 +71,10 @@ Suggests:
 VignetteBuilder: 
     knitr
 ByteCompile: true
-Config/Needs/website: C50, dbarts, earth, glmnet, keras, kernlab, kknn,
-    LiblineaR, mgcv, nnet, parsnip, quantreg, randomForest, ranger, rpart, 
-    rstanarm, tidymodels/tidymodels, tidyverse/tidytemplate, rstudio/reticulate,
-    xgboost, rmarkdown
+Config/Needs/website: brulee, C50, dbarts, earth, glmnet, keras, kernlab,
+    kknn, LiblineaR, mgcv, nnet, parsnip, quantreg, randomForest, ranger,
+    rpart, rstanarm, tidymodels/tidymodels, tidyverse/tidytemplate,
+    rstudio/reticulate, xgboost, rmarkdown
 Config/rcmdcheck/ignore-inconsequential-notes: true
 Config/testthat/edition: 3
 Encoding: UTF-8
