--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -49,6 +49,11 @@ jobs:
           tensorflow::install_tensorflow(version='2.13', conda_python_version = NULL)
         shell: Rscript {0}
 
+      - name: Install Torch
+        run: |
+          torch::install_torch()
+        shell: Rscript {0}
+
       - name: Build site
         run: pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE)
         shell: Rscript {0}
