use cran reticulate

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -61,8 +61,8 @@ jobs:
           extra-packages: any::rcmdcheck
           needs: check
 
-      - name: Install dev reticulate
-        run: pak::pkg_install('rstudio/reticulate')
+      - name: Install reticulate
+        run: pak::pkg_install('reticulate')
         shell: Rscript {0}
 
       - name: Install Miniconda
