--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -71,7 +71,7 @@ Suggests:
 VignetteBuilder: 
     knitr
 ByteCompile: true
-Config/Needs/website: brulee, C50, dbarts, earth, glmnet, keras, kernlab,
+Config/Needs/website: brulee, C50, dbarts, earth, glmnet, grf, keras, kernlab,
     kknn, LiblineaR, mgcv, nnet, parsnip, quantreg, randomForest, ranger,
     rpart, rstanarm, tidymodels/tidymodels, tidyverse/tidytemplate,
     rstudio/reticulate, xgboost, rmarkdown
