update tensorflow install in GHA

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -63,16 +63,15 @@ jobs:
         run: pak::pkg_install('reticulate')
         shell: Rscript {0}
 
-      - name: Install Miniconda
-        # conda can fail at downgrading python, so we specify python version in advance
-        env:
-          RETICULATE_MINICONDA_PYTHON_VERSION: "3.8"
-        run: reticulate::install_miniconda() # creates r-reticulate conda env by default
-        shell: Rscript {0}
+      - uses: actions/setup-python@v4
+        with:
+          python-version: 3.11
 
       - name: Install TensorFlow
         run: |
-          tensorflow::install_tensorflow(version='2.13', conda_python_version = NULL)
+          reticulate::virtualenv_create('r-reticulate', python='3.11')
+          reticulate::use_virtualenv('r-reticulate')
+          tensorflow::install_tensorflow(version='2.16')
         shell: Rscript {0}
 
       - uses: r-lib/actions/check-r-package@v2
