--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -32,15 +32,14 @@ jobs:
         shell: Rscript {0}
 
       - name: Install Miniconda
-        # conda can fail at downgrading python, so we specify python version in advance
-        env:
-          RETICULATE_MINICONDA_PYTHON_VERSION: "3.8"
-        run: reticulate::install_miniconda() # creates r-reticulate conda env by default
+        run: |
+          reticulate::install_miniconda()
         shell: Rscript {0}
-
+ 
       - name: Install TensorFlow
         run: |
-          tensorflow::install_tensorflow(version='2.13', conda_python_version = NULL)
+          reticulate::conda_create('r-reticulate', packages = c('python==3.11'))
+          tensorflow::install_tensorflow(version='2.16')
         shell: Rscript {0}
 
       - name: Test coverage
