--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -36,16 +36,9 @@ jobs:
           extra-packages: any::pkgdown, local::.
           needs: website
 
-      - name: Install Miniconda
-        # conda can fail at downgrading python, so we specify python version in advance
-        env:
-          RETICULATE_MINICONDA_PYTHON_VERSION: "3.8"
-        run: reticulate::install_miniconda() # creates r-reticulate conda env by default
-        shell: Rscript {0}
-
-      - name: Install TensorFlow
+      - name: Install TensorFlow/Keras
         run: |
-          tensorflow::install_tensorflow(version='2.13', conda_python_version = NULL)
+          keras::install_keras()
         shell: Rscript {0}
 
       - name: Install Torch
