--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,8 @@ Package: parsnip
 Title: A Common API to Modeling and Analysis Functions
 Version: 1.4.0
 Authors@R: c(
-    person("Max", "Kuhn", , "max@posit.co", role = c("aut", "cre")),
+    person("Max", "Kuhn", , "max@posit.co", role = c("cre", "aut"),
+           comment = c(ORCID = "0000-0003-2402-136X")),
     person("Davis", "Vaughan", , "davis@posit.co", role = "aut"),
     person("Emil", "Hvitfeldt", , "emil.hvitfeldt@posit.co", role = "ctb"),
     person("Posit Software, PBC", role = c("cph", "fnd"),
