--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ S3method(check_args,survival_reg)
 S3method(check_args,svm_linear)
 S3method(check_args,svm_poly)
 S3method(check_args,svm_rbf)
+S3method(check_args,tab_pfn)
 S3method(extract_fit_engine,model_fit)
 S3method(extract_fit_time,model_fit)
 S3method(extract_parameter_dials,model_spec)
@@ -169,6 +170,7 @@ S3method(update,survival_reg)
 S3method(update,svm_linear)
 S3method(update,svm_poly)
 S3method(update,svm_rbf)
+S3method(update,tab_pfn)
 S3method(varying_args,model_spec)
 S3method(varying_args,recipe)
 S3method(varying_args,step)
@@ -341,6 +343,7 @@ export(survival_reg)
 export(svm_linear)
 export(svm_poly)
 export(svm_rbf)
+export(tab_pfn)
 export(tidy)
 export(translate)
 export(translate.default)
