quantile regression engines for xgboost and qrnn (#1323)
* initial qrnn implementation

* initial xgboost implementation

* update unit tests

* update news

* engine docs

* update model table

* xgb unit test

* updates to pass activation args to the engine function

* document mlp engine

* add snapshots

* skip on older R version

* Update NEWS.md

Co-authored-by: Hannah Frick <hfrick@users.noreply.github.com>

* update docs

* add test for gradient function

* update from main; update snapshot

* update checklist with new model registration information

---------

Co-authored-by: Hannah Frick <hfrick@users.noreply.github.com>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -270,6 +270,7 @@ export(matrix_to_quantile_pred)
 export(max_mtry_formula)
 export(maybe_data_frame)
 export(maybe_matrix)
+export(mcqrnn_train)
 export(min_cols)
 export(min_rows)
 export(mlp)
