--- a/NAMESPACE
+++ b/NAMESPACE
@@ -289,10 +289,13 @@ export(pls)
 export(poisson_reg)
 export(pred_value_template)
 export(predict.model_fit)
+export(predict_class)
 export(predict_class.model_fit)
+export(predict_classprob)
 export(predict_classprob.model_fit)
 export(predict_confint)
 export(predict_confint.model_fit)
+export(predict_hazard)
 export(predict_hazard.model_fit)
 export(predict_linear_pred)
 export(predict_linear_pred.model_fit)
@@ -300,6 +303,7 @@ export(predict_numeric)
 export(predict_numeric.model_fit)
 export(predict_predint)
 export(predict_predint.model_fit)
+export(predict_quantile)
 export(predict_quantile.model_fit)
 export(predict_raw)
 export(predict_raw.model_fit)
